--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -24,7 +24,7 @@ The compressor consists of two independent parts, called the "frontend" and "bac
 
 The endpoint palettes are created from their source clusters using a very high quality, scalable DXTn endpoint optimizer. This custom optimizer is capable of processing any number of pixels, instead of the typical hard coded 16. crnlib's DXTn endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (This has been verified by randomly extracting millions of 4x4 pixel blocks for a large corpus of game textures and photos, compressing them using each compressor, and comparing the results.)
 
-The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Cluster_analysis cluster analysis], and [http://en.wikipedia.org/wiki/Vector_quantization Vector quantization] is used to create the initial selector palette. Multiple feedback passes are performed between the clusterization and VQ steps to optimize quality, and the compressor can optionally use several brute force refinement stages to improve quality even more.
+The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Cluster_analysis cluster analysis], and [http://en.wikipedia.org/wiki/Vector_quantization vector quantization] is used to create the initial selector palette. Multiple feedback passes are performed between the clusterization and VQ steps to optimize quality, and the compressor can optionally use several brute force refinement stages to improve quality even more.
 
 Most of the compression steps are multithreaded in a relatively straightforward way: subdivide the work into independent threadpool tasks, fork to multiple threads, then join.
 
