--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -2,7 +2,7 @@
 
 = Building the Examples =
 
-{{crn.2008.sln}} builds crnlib itself, and the "crunch" command line tool, and {{crn_examples.2008.sln}} builds the examples. Both are Visual Studio 2008 (VC9) solution file containing projects for Win32 and x64. crnlib itself also builds with VS2005, VS2010, and gcc 4.5.0 (TDM GCC+MinGW).  A codeblocks 10.05 workspace and project file is also included, but compiling crnlib this way hasn't been tested much.
+{{{crn.2008.sln}}} builds crnlib itself, and the "crunch" command line tool, and {{{crn_examples.2008.sln}}} builds the examples. Both are Visual Studio 2008 (VC9) solution file containing projects for Win32 and x64. crnlib itself also builds with VS2005, VS2010, and gcc 4.5.0 (TDM GCC+MinGW).  A codeblocks 10.05 workspace and project file is also included, but compiling crnlib this way hasn't been tested much.
 
 example1: Demonstrates how to use crnlib's high-level C-helper
 compression/decompression/transcoding functions in inc/crnlib.h. It's a
