Edited wiki page Building through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@14 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Describes the examples included in the source distribution
 
 = Building the Examples =
 
