Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@23 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -2,7 +2,7 @@
 
 = Compression Algorithm Details =
 
-This is pretty high level. I'll improve this over time, for now I hope this is enough:
+This is pretty high level and could be much better. I'll improve this over time, for now I hope this is enough:
 
 == Data Format ==
 
