--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -22,7 +22,7 @@ To transcode a mipmap level to DXTn, the palettes must be first unpacked, either
 
 The compressor is complex, partially due to the weird properties imposed by the DXTn block format. It consists of two independent parts, called the "frontend" and "backend". The frontend adaptively subdivides the texture into tile blocks, finds the endpoint and selector clusters, and then generates optimized palettes based off these clusters. The backend takes the palettes and indices supplied by the frontend and tries to efficiently code them.
 
-The endpoint palettes are created from their source clusters using a very high quality, scalable DXTn endpoint optimizer. This custom optimizer is capable of processing any number of pixels, instead of the typical hard coded 16. crnlib's DXTn endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (This has been verified by randomly extracting millions of 4x4 pixel blocks for a large corpus of game textures and photos, compressing them using each compressor, and comparing the results.)
+The color endpoint palettes are created from their source clusters using a very high quality, scalable DXT1 endpoint optimizer. This custom optimizer is capable of processing any number of pixels, instead of the typical hard coded 16. crnlib's DXT1 endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (This has been verified by randomly extracting millions of 4x4 pixel blocks for a large corpus of game textures and photos, compressing them using each compressor, and comparing the results. I hope to eventually release this tool.)
 
 The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Cluster_analysis cluster analysis], and [http://en.wikipedia.org/wiki/Vector_quantization vector quantization] is used to create the initial selector palette. Multiple feedback passes are performed between the clusterization and VQ steps to optimize quality, and the compressor can optionally use several brute force refinement stages to improve quality even more.
 
