--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -28,4 +28,4 @@ The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Clu
 
 Most of the compression steps are multithreaded in a relatively straightforward way: subdivide the work into independent threadpool tasks, fork to multiple threads, then join.
 
-The .CRN format currently utilizes canonical Huffman coding for speed. The symbol codelengths for each Huffman table are sent in a simple compressed manner, like Deflate. Improved compression is definitely possible. (The current format is probably favoring transcoding speed vs. ratio too highly.)
+The .CRN format currently utilizes canonical Huffman coding for speed. The symbol codelengths for each Huffman table are sent in a simple compressed manner, like Deflate. Improves here are definitely possible, but I ran out of time. (The current format is probably favoring transcoding speed vs. ratio too highly.)
