Edited wiki page KnownProblems through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@34 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -8,10 +8,9 @@ such as LZO, zlib, or custom codecs, so crnlib's bitrate measurements
 will be inaccurate. It should be easy to allow the caller to plug-in
 custom lossless compressors for bitrate measurement.
 
- * Compressing to a desired bitrate can be time consuming, especially when
-processing large (2k or 4k) images to the .CRN format. There are several
-high-level optimizations employed when compressing to clustered DXTn .DDS
-files using multiple trials, but not so for .CRN.
+ * Compressing to a desired bitrate can be very time consuming, especially when processing large (2k or 4k) images to the .CRN format. There are several high-level optimizations employed when compressing to clustered DXTn .DDS files using multiple trials, but not so for .CRN.
+
+The current approach compresses the input image multiple times, using an [http://en.wikipedia.org/wiki/Interpolation_search interpolation search] to find the integer quality that gets closest to the target bitrate.
 
  * The .CRN compressor does not currently use 3 color (transparent) DXT1
 blocks at all, only 4 color blocks. So it doesn't support DXT1A
