Edited wiki page KnownProblems through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@37 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -2,10 +2,7 @@
 
 = Known Issues/Bugs =
 
- * crnlib currently assumes you'll be further losslessly compressing its output .DDS files using LZMA. However, some engines use weaker codecs
-such as LZO, zlib, or custom codecs, so crnlib's bitrate measurements
-will be inaccurate. It should be easy to allow the caller to plug-in
-custom lossless compressors for bitrate measurement.
+ * crnlib currently assumes you'll be further losslessly compressing its output .DDS files using LZMA. However, some engines use weaker codecs such as LZO, zlib, or custom codecs, so crnlib's bitrate measurements will be inaccurate. It should be easy to allow the caller to plug-in custom lossless compressors for bitrate measurement.
 
  * Compressing to a desired bitrate can be very time consuming, especially when processing large (2k or 4k) images to the .CRN format. There are several high-level optimizations employed when compressing to clustered DXTn .DDS files using multiple trials, but not so for .CRN.
 
