--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -14,4 +14,4 @@
 
  * The DXT5_CCXY format uses a simple YCoCg encoding that seems workable but hasn't been tuned for max. quality yet.
 
- * Ignore the SSIM statistics printed when using the -imagestats option - it's currently bogus. I implemented this before fully understanding how the metric is computed over the entire image.
+ * Ignore the SSIM statistics printed when using the -imagestats option - it's currently bogus. (So far, I've been using PSNR, which I know sucks.)
