Edited wiki page SupportedFormats through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@46 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/SupportedFormats.wiki
+++ b/wiki/SupportedFormats.wiki
@@ -4,7 +4,7 @@
 
 crnlib supports two compressed texture file formats. The first
 format (clustered [http://en.wikipedia.org/wiki/DirectDraw_Surface .DDS]) is simple to integrate into an existing project
-(typically, no code changes are required), but it doesn't offer the
+(no code changes are typically required), but it doesn't offer the
 highest quality/compression ratio that crnlib is capable of. Integrating
 the second, higher quality custom format (.CRN) requires a few
 typically straightforward engine modifications to integrate the
