Edited wiki page KnownProblems through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@49 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -16,4 +16,4 @@
 
  * Ignore the SSIM statistics printed when using the -imagestats option - it's currently bogus. (So far, I've been using PSNR, which I know sucks.)
 
- * The crn_decomp.h header file library is freaking huge (~4800 lines). Also, crnlib is Win32 only.
+ * The crn_decomp.h header file library is freaking huge (~4800 lines). It would be nice to port it to C and shrink it. Also, crnlib is Win32 only.
