--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -4,6 +4,8 @@
 
 {{{crn.2008.sln}}} builds crnlib and the "crunch" command line tool, and {{{crn_examples.2008.sln}}} builds the examples. Both are Visual Studio 2008 (VC9) solution file containing projects for Win32 and x64. crnlib itself also builds with VS2005, VS2010, and gcc 4.5.0 (TDM GCC+MinGW).  A codeblocks 10.05 workspace and project file is also included, but compiling crnlib this way hasn't been tested much.
 
+crnlib/crunch don't build under Linux yet, but the stand-alone transcoder header file library `inc/crn_decomp.h` should compile and work fine under Linux.
+
 == example1 ==
 Demonstrates how to use crnlib's high-level C-helper
 compression/decompression/transcoding functions in inc/crnlib.h. It's a
