--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -25,7 +25,7 @@ In this image, the macroblock tile boundaries are outlined in gray:
 
 http://crunch.googlecode.com/svn/wiki/crunch_macroblock_tiles.png
 
-Note that the more complex areas of the image contain smaller tiles, so these image areas get assigned more endpoints. Simpler areas use larger tiles, so the DXT1 blocks in these tiles are constrained to share the same endpoint. Also, a single color endpoint can be shared by many tiles, independent of their location in the image.
+Notice that the more complex areas of the image contain smaller tiles, so these image areas get assigned more endpoints. Simpler areas use larger tiles, so the DXT1 blocks in these tiles are constrained to share the same endpoint. Also, a single color endpoint can be shared by many tiles, independent of their location in the image.
 
 For each tile, a compressed index is sent to select the macroblock tile arrangement, followed by between one to four DPCM+Huffman compressed endpoint palette indices. Four selector indices (again coded using DPCM+Huffman) are always sent immediately after the endpoint(s). 
 
