--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -6,7 +6,9 @@ This is pretty high level and could be much better. I'll improve this over time,
 
 == Data Format ==
 
-The easiest way to describe how crnlib works is to start at the compressed data stream and the transcoding process and work backwards (which is how I started designing this codec). .CRN DXT1 files consist of a small header, followed by a DPCM+Huffman compressed endpoint palette, and a DPCM+Huffman compressed selector palette. (DXT5 files contain two more palettes for alpha.) 
+The easiest way to describe how crnlib works is to start at the compressed data stream and the transcoding process and work backwards (which mirrors the design process followed when I designed crnlib).
+
+.CRN DXT1 files consist of a small header, followed by a DPCM+Huffman compressed endpoint palette, and a DPCM+Huffman compressed selector palette. (DXT5 files contain two more palettes for alpha.) 
 
 Here's a visualization of the DXT1 color selector palette for kodim04.png. It's 2692x16. The selectors where scaled to [0,255]. (I think this palette was sorted by similarity - the compressor didn't necessary order the palette entries this way, but it's good for visualization.)
 
