Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@83 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -8,7 +8,7 @@ This is pretty high level and could be much better. I'll improve this over time,
 
 The easiest way to describe how crnlib works is to start at the compressed data stream and the transcoding process and work backwards to the compressor, which also mirrors the design process followed when I designed crnlib.
 
-.CRN DXT1 files consist of a small header, followed by a DPCM+Huffman compressed endpoint palette, and a DPCM+Huffman compressed selector palette. (DXT5 files contain two more palettes for alpha.) 
+.CRN DXT1 files consist of a small header, followed by a [http://en.wikipedia.org/wiki/DPCM DPCM]+[http://en.wikipedia.org/wiki/Huffman_Compression Huffman] compressed endpoint palette, and a DPCM+Huffman compressed selector palette. (DXT5 files contain two more palettes for alpha endpoints and selectors.) 
 
 Here's a visualization of the DXT1 color selector palette for kodim04.png. It's 2692x16. The selectors where scaled to [0,255]. (I think this palette was sorted by similarity - the compressor didn't necessary order the palette entries this way, but it's good for visualization.)
 
