Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@89 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -73,7 +73,7 @@ To transcode a mipmap level to DXTn, the palettes must be first unpacked, either
 
 The compressor is complex, partially due to the weird properties imposed by the DXTn block format. It consists of two independent parts, called the "frontend" and "backend".
 
-The frontend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt_hc.cpp dxt_hc.cpp/.h], adaptively subdivides the texture into tile blocks, finds the endpoint and selector clusters, and then generates optimized palettes based off these clusters. The backend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_comp.cpp crn_comp.cpp/.h] takes the palettes and indices supplied by the frontend and tries to efficiently code them.
+The frontend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt_hc.cpp dxt_hc.cpp/h], adaptively subdivides the texture into tile blocks, finds the endpoint and selector clusters, and then generates optimized palettes based off these clusters. The backend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_comp.cpp crn_comp.cpp/h] takes the palettes and indices supplied by the frontend and tries to efficiently code them.
 
 The color endpoint palettes are created from their source clusters using a very high quality, scalable DXT1 endpoint optimizer. This custom optimizer is capable of processing any number of pixels, instead of the typical hard coded 16. crnlib's DXT1 endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (I verified this while building the endpoint optimizer by randomly extracting millions of 4x4 pixel blocks from a large corpus of game textures and photos, compressing->decompressing them using each compressor, and comparing the results. I hope to eventually release this tool.)
 
